--- a/src/sample/ManagerMenu/ManagerMenu.fxml
+++ b/src/sample/ManagerMenu/ManagerMenu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -88,6 +89,7 @@
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -103,31 +105,58 @@
                               <ComboBox fx:id="comboBoxEnd1" prefWidth="150.0" promptText="Ending Hour" GridPane.columnIndex="2" />
                               <ComboBox fx:id="comboBoxStart1" layoutX="110.0" layoutY="13.0" prefWidth="150.0" promptText="Starting Hour" GridPane.columnIndex="1" />
                               <Label fx:id="labelDay1" text="Sunday" />
-                              <Label fx:id="LabelDay2" text="Monday" GridPane.rowIndex="1" />
+                              <Label fx:id="labelDay2" text="Monday" GridPane.rowIndex="1" />
                               <ComboBox fx:id="comboBoxStart2" layoutX="110.0" layoutY="13.0" prefWidth="150.0" promptText="Starting Hour" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <ComboBox fx:id="comboBoxEnd2" layoutX="210.0" layoutY="13.0" prefWidth="150.0" promptText="Ending Hour" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                               <ComboBox fx:id="comboBoxStart3" layoutX="110.0" layoutY="43.0" prefWidth="150.0" promptText="Starting Hour" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <Label fx:id="LabelDay3" layoutX="10.0" layoutY="47.0" text="Day" GridPane.rowIndex="2" />
+                              <Label fx:id="labelDay3" layoutX="10.0" layoutY="47.0" text="Day" GridPane.rowIndex="2" />
                               <ComboBox fx:id="comboBoxEnd3" layoutX="210.0" layoutY="43.0" prefWidth="150.0" promptText="Ending Hour" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                               <ComboBox fx:id="comboBoxEnd4" layoutX="210.0" layoutY="73.0" prefWidth="150.0" promptText="Ending Hour" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                               <ComboBox fx:id="comboBoxEnd5" prefWidth="150.0" promptText="Ending Hour" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                              <Label fx:id="LabelDay4" layoutX="10.0" layoutY="77.0" text="Day" GridPane.rowIndex="3" />
+                              <Label fx:id="labelDay4" layoutX="10.0" layoutY="77.0" text="Day" GridPane.rowIndex="3" />
                               <ComboBox fx:id="comboBoxEnd6" layoutX="110.0" layoutY="103.0" prefWidth="150.0" promptText="Ending Hour" GridPane.columnIndex="2" GridPane.rowIndex="5" />
                               <ComboBox fx:id="comboBoxEnd7" layoutX="210.0" layoutY="163.0" prefWidth="150.0" promptText="Ending Hour" GridPane.columnIndex="2" GridPane.rowIndex="6" />
                               <ComboBox fx:id="comboBoxStart4" layoutX="110.0" layoutY="73.0" prefWidth="150.0" promptText="Starting Hour" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                               <ComboBox fx:id="comboBoxStart5" layoutX="110.0" layoutY="103.0" prefWidth="150.0" promptText="Starting Hour" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                               <ComboBox fx:id="comboBoxStart6" layoutX="110.0" layoutY="133.0" prefWidth="150.0" promptText="Starting Hour" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                               <ComboBox fx:id="comboBoxStart7" layoutX="110.0" layoutY="163.0" prefWidth="150.0" promptText="Starting Hour" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                              <Label fx:id="LabelDay5" layoutX="10.0" layoutY="122.0" text="Day" GridPane.rowIndex="4" />
-                              <Label fx:id="LabelDay6" layoutX="10.0" layoutY="157.0" text="Day" GridPane.rowIndex="5" />
-                              <Label fx:id="LabelDay7" layoutX="10.0" layoutY="192.0" text="Day" GridPane.rowIndex="6" />
+                              <Label fx:id="labelDay5" layoutX="10.0" layoutY="122.0" text="Day" GridPane.rowIndex="4" />
+                              <Label fx:id="labelDay6" layoutX="10.0" layoutY="157.0" text="Day" GridPane.rowIndex="5" />
+                              <Label fx:id="labelDay7" layoutX="10.0" layoutY="192.0" text="Day" GridPane.rowIndex="6" />
+                              <CheckBox fx:id="checkBox1" mnemonicParsing="false" text="No Hours" GridPane.columnIndex="3" />
                            </children>
                         </GridPane>
                         <Label fx:id="labelWeek" layoutX="43.0" layoutY="50.0" text="Week:" />
-                        <Button fx:id="updateSchedule" layoutX="300.0" layoutY="388.0" mnemonicParsing="false" text="Update" />
+                        <Button fx:id="updateSchedule" layoutX="300.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleUpdate" text="Update" />
                         <Button fx:id="buttonExitSchedule" layoutX="380.0" layoutY="388.0" mnemonicParsing="false" text="Exit" />
                         <Label layoutX="46.0" layoutY="351.0" prefHeight="44.0" prefWidth="68.0" text="Total Hours this Week:" textAlignment="CENTER" wrapText="true" />
                         <Label fx:id="labelHourNumber" layoutX="132.0" layoutY="365.0" text="Hours" />
+                        <Button fx:id="buttonBackWeek" layoutX="258.0" layoutY="46.0" mnemonicParsing="false" text="Pervious Week" />
+                        <Button fx:id="buttonFowardWeek" layoutX="354.0" layoutY="46.0" mnemonicParsing="false" text="Next Week" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
+            <Tab fx:id="tabShift" onSelectionChanged="#handleViewShift" text="View Shift">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="tableViewShift" layoutX="72.0" layoutY="14.0" prefHeight="225.0" prefWidth="374.0">
+                          <columns>
+                            <TableColumn fx:id="collEmployeeName" prefWidth="75.0" text="Name" />
+                            <TableColumn fx:id="colEmpID" prefWidth="75.0" text="ID" />
+                              <TableColumn fx:id="colTitle" prefWidth="75.0" text="Title" />
+                              <TableColumn fx:id="colStart" prefWidth="75.0" text="Shift Start" />
+                              <TableColumn fx:id="colEnd" prefWidth="75.0" text="Shift End" />
+                          </columns>
+                        </TableView>
+                        <ComboBox layoutX="78.0" layoutY="261.0" prefWidth="150.0" promptText="Starting Hour" />
+                        <ComboBox layoutX="246.0" layoutY="261.0" prefWidth="150.0" promptText="End Hour" />
+                        <Button layoutX="220.0" layoutY="324.0" mnemonicParsing="false" text="Reset Table" />
+                        <Button layoutX="46.0" layoutY="373.0" mnemonicParsing="false" text="View Emp. Info" />
+                        <Button layoutX="168.0" layoutY="373.0" mnemonicParsing="false" text="Edit Schedule" />
+                        <Button layoutX="282.0" layoutY="373.0" mnemonicParsing="false" text="Return to Home" />
+                        <DatePicker layoutX="25.0" layoutY="303.0" />
                      </children>
                   </AnchorPane>
               </content>
