--- a/src/sample/ManagerMenu/ManagerMenu.fxml
+++ b/src/sample/ManagerMenu/ManagerMenu.fxml
@@ -133,6 +133,7 @@
                         <Label fx:id="labelHourNumber" layoutX="132.0" layoutY="365.0" text="Hours" />
                         <Button fx:id="buttonBackWeek" layoutX="258.0" layoutY="46.0" mnemonicParsing="false" text="Pervious Week" />
                         <Button fx:id="buttonFowardWeek" layoutX="354.0" layoutY="46.0" mnemonicParsing="false" text="Next Week" />
+                        <Button fx:id="buttonResetWeek" layoutX="187.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleResetWeek" text="Reset Week" />
                      </children>
                   </AnchorPane>
               </content>
@@ -143,7 +144,7 @@
                      <children>
                         <TableView fx:id="tableViewShift" layoutX="72.0" layoutY="14.0" prefHeight="225.0" prefWidth="374.0">
                           <columns>
-                            <TableColumn fx:id="collEmployeeName" prefWidth="75.0" text="Name" />
+                            <TableColumn fx:id="colEmployeeName" prefWidth="75.0" text="Name" />
                             <TableColumn fx:id="colEmpID" prefWidth="75.0" text="ID" />
                               <TableColumn fx:id="colTitle" prefWidth="75.0" text="Title" />
                               <TableColumn fx:id="colStart" prefWidth="75.0" text="Shift Start" />
