You can now selcete an emplyee and click Add schedle, set the start hour and end hour and on the See Shift tab, if you select the right date, you can see the information is updated

--- a/src/sample/EventMenu/EventMenuHome.fxml
+++ b/src/sample/EventMenu/EventMenuHome.fxml
@@ -15,5 +15,6 @@
       <Button fx:id="buttonSort" layoutX="288.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleSort" text="Show Spas" />
       <Button fx:id="buttonResetList" layoutX="372.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleRestoreList" text="Reset List" />
       <ComboBox fx:id="comboBoxSort" layoutX="286.0" layoutY="257.0" onAction="#handleComboSort" prefWidth="150.0" promptText="Show Only Type:" />
+      <Button fx:id="buttonExit" layoutX="482.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleExit" text="Return Home" />
    </children>
 </AnchorPane>
