--- a/src/sample/ManagerMenu/ManagerMenu.fxml
+++ b/src/sample/ManagerMenu/ManagerMenu.fxml
@@ -36,6 +36,7 @@
                         <Button fx:id="buttonAdd" layoutX="182.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleAddButton" text="Add" />
                         <Button fx:id="buttonDelete" layoutX="226.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleDeleteEmployee" text="Delete" />
                         <Text layoutX="81.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modify Employee:" />
+                        <Button fx:id="buttonSchedule" layoutX="293.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleSetSchedule" text="Set Schedule" />
                      </children>
                   </AnchorPane>
             </content>
@@ -83,7 +84,7 @@
                      <children>
                         <Label layoutX="146.0" layoutY="14.0" text="Pick Week" />
                         <DatePicker fx:id="datePickerWeek" layoutX="203.0" layoutY="10.0" onAction="#handlePickDate" prefHeight="26.0" prefWidth="138.0" />
-                        <Label layoutX="26.0" layoutY="14.0" text="Weekly Schedule" />
+                        <Label fx:id="labelEmployeeName" layoutX="26.0" layoutY="14.0" text="EmployeeName" />
                         <GridPane hgap="10.0" layoutX="43.0" layoutY="76.0" vgap="5.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -157,7 +158,7 @@
                         <Button layoutX="46.0" layoutY="373.0" mnemonicParsing="false" text="View Emp. Info" />
                         <Button layoutX="168.0" layoutY="373.0" mnemonicParsing="false" text="Edit Schedule" />
                         <Button layoutX="282.0" layoutY="373.0" mnemonicParsing="false" text="Return to Home" />
-                        <DatePicker layoutX="25.0" layoutY="303.0" />
+                        <DatePicker fx:id="datePickerShiftDay" layoutX="25.0" layoutY="303.0" onAction="#handleShiftDay" />
                      </children>
                   </AnchorPane>
               </content>
