--- a/src/sample/ManagerMenu/ManagerMenu.fxml
+++ b/src/sample/ManagerMenu/ManagerMenu.fxml
@@ -26,17 +26,18 @@
             <content>
                   <AnchorPane>
                      <children>
-                        <TableView fx:id="tableViewEmployees" layoutX="65.0" layoutY="14.0" prefHeight="236.0" prefWidth="228.0">
+                        <TableView fx:id="tableViewEmployees" layoutX="114.0" layoutY="14.0" prefHeight="236.0" prefWidth="228.0">
                           <columns>
                             <TableColumn fx:id="columnEmployeeID" prefWidth="75.0" text="Employee ID" />
                             <TableColumn fx:id="columnNameEmployee" prefWidth="75.0" text="Name" />
                               <TableColumn fx:id="columnPayroll" prefWidth="75.0" text="Payroll" />
                           </columns>
                         </TableView>
-                        <Button fx:id="buttonAdd" layoutX="182.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleAddButton" text="Add" />
-                        <Button fx:id="buttonDelete" layoutX="226.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleDeleteEmployee" text="Delete" />
-                        <Text layoutX="81.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modify Employee:" />
-                        <Button fx:id="buttonSchedule" layoutX="293.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleSetSchedule" text="Set Schedule" />
+                        <Button fx:id="buttonAdd" layoutX="154.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleAddButton" text="Add" />
+                        <Button fx:id="buttonDelete" layoutX="203.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleDeleteEmployee" text="Delete" />
+                        <Text layoutX="38.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modify Employee:" />
+                        <Button fx:id="buttonSchedule" layoutX="271.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleSetSchedule" text="Set Schedule" />
+                        <Button fx:id="buttonReturnHome" layoutX="305.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleReturnHome" text="Return to Home" />
                      </children>
                   </AnchorPane>
             </content>
@@ -128,13 +129,13 @@
                            </children>
                         </GridPane>
                         <Label fx:id="labelWeek" layoutX="43.0" layoutY="50.0" text="Week:" />
-                        <Button fx:id="updateSchedule" layoutX="300.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleUpdate" text="Update" />
-                        <Button fx:id="buttonExitSchedule" layoutX="380.0" layoutY="388.0" mnemonicParsing="false" text="Exit" />
+                        <Button fx:id="updateSchedule" layoutX="258.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleUpdate" text="Update" />
                         <Label layoutX="46.0" layoutY="351.0" prefHeight="44.0" prefWidth="68.0" text="Total Hours this Week:" textAlignment="CENTER" wrapText="true" />
                         <Label fx:id="labelHourNumber" layoutX="132.0" layoutY="365.0" text="Hours" />
                         <Button fx:id="buttonBackWeek" layoutX="258.0" layoutY="46.0" mnemonicParsing="false" text="Pervious Week" />
                         <Button fx:id="buttonFowardWeek" layoutX="354.0" layoutY="46.0" mnemonicParsing="false" text="Next Week" />
-                        <Button fx:id="buttonResetWeek" layoutX="187.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleResetWeek" text="Reset Week" />
+                        <Button fx:id="buttonResetWeek" layoutX="162.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleResetWeek" text="Reset Week" />
+                        <Button fx:id="buttonReturnHome" layoutX="352.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleReturnHome" text="Return to Home" />
                      </children>
                   </AnchorPane>
               </content>
@@ -156,8 +157,8 @@
                         <ComboBox layoutX="246.0" layoutY="261.0" prefWidth="150.0" promptText="End Hour" />
                         <Button layoutX="220.0" layoutY="324.0" mnemonicParsing="false" text="Reset Table" />
                         <Button layoutX="46.0" layoutY="373.0" mnemonicParsing="false" text="View Emp. Info" />
-                        <Button layoutX="168.0" layoutY="373.0" mnemonicParsing="false" text="Edit Schedule" />
-                        <Button layoutX="282.0" layoutY="373.0" mnemonicParsing="false" text="Return to Home" />
+                        <Button fx:id="buttonSchedule" layoutX="168.0" layoutY="373.0" mnemonicParsing="false" onAction="#handleSetSchedule" text="Edit Schedule" />
+                        <Button fx:id="buttonReturnHome" layoutX="282.0" layoutY="373.0" mnemonicParsing="false" onAction="#handleReturnHome" text="Return to Home" />
                         <DatePicker fx:id="datePickerShiftDay" layoutX="25.0" layoutY="303.0" onAction="#handleShiftDay" />
                      </children>
                   </AnchorPane>
