--- a/src/sample/ManagerMenu/ManagerMenu.fxml
+++ b/src/sample/ManagerMenu/ManagerMenu.fxml
@@ -84,7 +84,7 @@
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="373.0" prefWidth="400.0">
                      <children>
                         <Label layoutX="146.0" layoutY="14.0" text="Pick Week" />
-                        <DatePicker fx:id="datePickerWeek" layoutX="203.0" layoutY="10.0" onAction="#handlePickDate" prefHeight="26.0" prefWidth="138.0" />
+                        <DatePicker fx:id="datePickerWeek" layoutX="203.0" layoutY="10.0" onAction="#handlePickDate" prefHeight="26.0" prefWidth="138.0" promptText="Pick work Day" />
                         <Label fx:id="labelEmployeeName" layoutX="26.0" layoutY="14.0" text="EmployeeName" />
                         <GridPane hgap="10.0" layoutX="43.0" layoutY="76.0" vgap="5.0">
                           <columnConstraints>
