--- a/src/sample/EventMenu/EventCreate.fxml
+++ b/src/sample/EventMenu/EventCreate.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -32,13 +33,15 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField text="Name your Event" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField text="Number of ppl Attending" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField text="Name of Organizor" GridPane.columnIndex="1" />
+            <TextField fx:id="textFieldNameofEvent" text="Name your Event" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="textFieldNumberOfGuest" text="Number of ppl Attending" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="textFieldOrganization" text="Name of Organizor" GridPane.columnIndex="1" />
             <TextField text="Other Details" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField text="Select Vendor" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="textFieldVendor" text="Select Vendor" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
       <Button fx:id="b1" layoutX="185.0" layoutY="318.0" mnemonicParsing="false" onAction="#b12" text="Button" />
+      <CheckBox layoutX="260.0" layoutY="62.0" mnemonicParsing="false" text="CheckBox" />
+      <Button fx:id="buttibnExit" layoutX="492.0" layoutY="331.0" mnemonicParsing="false" onAction="#handleExit" text="Exit" />
    </children>
 </AnchorPane>
