--- a/src/sample/EventMenu/EventCreate.fxml
+++ b/src/sample/EventMenu/EventCreate.fxml
@@ -33,11 +33,11 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField fx:id="textFieldNameofEvent" text="Name your Event" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="textFieldNumberOfGuest" text="Number of ppl Attending" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="textFieldOrganization" text="Name of Organizor" GridPane.columnIndex="1" />
-            <TextField text="Other Details" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="textFieldVendor" text="Select Vendor" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+           <TextField fx:id="nameOfEvent" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+           <TextField fx:id="numOfPeople" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+           <TextField fx:id="nameOfOrganization" GridPane.columnIndex="1" />
+           <TextField fx:id="otherDetails" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+           <TextField fx:id="selectVendor" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
       <Button fx:id="b1" layoutX="185.0" layoutY="318.0" mnemonicParsing="false" onAction="#b12" text="Button" />
