--- a/src/sample/EventMenu/EventCreate.fxml
+++ b/src/sample/EventMenu/EventCreate.fxml
@@ -11,10 +11,10 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EventMenu.EventCreateController">
+<AnchorPane prefHeight="385.0" prefWidth="546.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EventMenu.EventCreateController">
    <children>
-      <ComboBox layoutX="44.0" layoutY="37.0" prefWidth="150.0" promptText="Pick EVent" />
-      <Label layoutX="296.0" layoutY="113.0" text="Picture of Venue" />
+      <ComboBox layoutX="62.0" layoutY="37.0" prefWidth="150.0" promptText="Pick Event" />
+      <Label layoutX="327.0" layoutY="112.0" text="Picture of Venue" />
       <DatePicker fx:id="checkInDatePicker" layoutX="296.0" layoutY="205.0" />
       <DatePicker fx:id="checkOutDatePicker" layoutX="296.0" layoutY="271.0" />
       <Label layoutX="327.0" layoutY="175.0" text="Event Start Date:" />
@@ -40,8 +40,8 @@
            <TextField fx:id="selectVendor" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
-      <Button fx:id="b1" layoutX="185.0" layoutY="318.0" mnemonicParsing="false" onAction="#b12" text="Button" />
-      <CheckBox layoutX="260.0" layoutY="62.0" mnemonicParsing="false" text="CheckBox" />
-      <Button fx:id="buttibnExit" layoutX="492.0" layoutY="331.0" mnemonicParsing="false" onAction="#handleExit" text="Exit" />
+      <Button fx:id="b1" layoutX="185.0" layoutY="332.0" mnemonicParsing="false" onAction="#b12" text="Button" />
+      <CheckBox layoutX="327.0" layoutY="41.0" mnemonicParsing="false" text="CheckBox" />
+      <Button fx:id="buttibnExit" layoutX="435.0" layoutY="332.0" mnemonicParsing="false" onAction="#handleExit" text="Exit" />
    </children>
 </AnchorPane>
