--- a/src/sample/EventMenu/EventMenuHome.fxml
+++ b/src/sample/EventMenu/EventMenuHome.fxml
@@ -9,13 +9,13 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EventMenu.EventMenuHomeController">
    <children>
       <ListView fx:id="listViewEvent" layoutX="39.0" layoutY="91.0" prefHeight="200.0" prefWidth="200.0" />
-      <Label layoutX="45.0" layoutY="59.0" text="List of Sponsered Events" />
-      <Button layoutX="10.0" layoutY="325.0" mnemonicParsing="false" text="More Info." />
-      <Button fx:id="buttonCreate" layoutX="146.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleCreate" text="Plan a Event" />
-      <Button fx:id="buttonSort" layoutX="250.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleSort" text="Show Spas" />
-      <Button fx:id="buttonResetList" layoutX="361.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleRestoreList" text="Reset List" />
-      <ComboBox fx:id="comboBoxSort" layoutX="248.0" layoutY="279.0" onAction="#handleComboSort" prefWidth="150.0" promptText="Show Only Type:" />
-      <Button fx:id="buttonExit" layoutX="482.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleExit" text="Return Home" />
-      <Label layoutX="286.0" layoutY="59.0" text="Event Info" />
+      <Label layoutX="75.0" layoutY="59.0" text="List of Sponsered Events" />
+      <Button layoutX="21.0" layoutY="325.0" mnemonicParsing="false" text="More Info." />
+      <Button fx:id="buttonCreate" layoutX="103.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleCreate" text="Plan Event" />
+      <Button fx:id="buttonSort" layoutX="184.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleSort" text="Show Spas" />
+      <Button fx:id="buttonResetList" layoutX="347.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleRestoreList" text="Reset List" />
+      <ComboBox fx:id="comboBoxSort" layoutX="348.0" layoutY="279.0" onAction="#handleComboSort" prefHeight="25.0" prefWidth="158.0" promptText="Show Only Type:" />
+      <Button fx:id="buttonExit" layoutX="420.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleExit" prefHeight="25.0" prefWidth="88.0" text="Return Home" />
+      <Label layoutX="400.0" layoutY="59.0" text="Event Info" />
    </children>
 </AnchorPane>
