--- a/src/sample/LoginMenu/LoginMenu.fxml
+++ b/src/sample/LoginMenu/LoginMenu.fxml
@@ -19,29 +19,34 @@
         <tabs>
           <Tab fx:id="tabGuest" text="Guest">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="215.0" prefWidth="200.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="299.0" prefWidth="320.0">
                      <children>
-                        <TextField id="UserTextField" fx:id="textfieldUsername" layoutX="103.0" layoutY="110.0" prefHeight="25.0" prefWidth="174.0" promptText="ex: &quot;alexjordan12&quot;" />
-                        <PasswordField fx:id="passwordField" layoutX="103.0" layoutY="144.0" promptText="ex: &quot;openSeasme&quot;" />
-                          <Button id="LoginButton" fx:id="buttonLogin" layoutX="133.0" layoutY="215.0" onAction="#handleButtonLogin" prefHeight="25.0" prefWidth="53.0" text="Login" />
-                          <Label fx:id="labelLoginSuccess" layoutX="18.0" layoutY="171.0" minHeight="16" minWidth="69" prefHeight="41.0" prefWidth="145.0" wrapText="true" />
-                        <Text layoutX="43.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
-                        <Text layoutX="43.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="53.291015625" />
-                        <Button fx:id="buttonExit" layoutX="199.0" layoutY="215.0" mnemonicParsing="false" onAction="#handleButtonExit" prefHeight="25.0" prefWidth="53.0" text="Exit" />
-                        <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="44.0" layoutY="215.0">
+                        <ImageView fitHeight="297.0" fitWidth="320.0">
                            <image>
-                              <Image url="@../icons8-beach-filled-50.png" />
+                              <Image url="@../Pictures/RubyRotate.gif" />
                            </image>
                         </ImageView>
-                        <Text layoutX="53.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ruby Resort" textAlignment="CENTER" wrappingWidth="212.13671875">
+                        <TextField id="UserTextField" fx:id="textfieldUsername" layoutX="88.0" layoutY="110.0" prefHeight="25.0" prefWidth="196.0" promptText="ex: &quot;michaeljordan12&quot;" />
+                        <PasswordField fx:id="passwordField" layoutX="88.0" layoutY="144.0" prefHeight="25.0" prefWidth="196.0" promptText="ex: &quot;openSesame&quot;" />
+                          <Button id="LoginButton" fx:id="buttonLogin" layoutX="231.0" layoutY="180.0" onAction="#handleButtonLogin" prefHeight="25.0" prefWidth="53.0" text="Login" />
+                          <Label fx:id="labelLoginSuccess" layoutX="14.0" layoutY="207.0" minHeight="16" minWidth="69" prefHeight="41.0" prefWidth="145.0" wrapText="true" />
+                        <Text fill="WHITE" layoutX="28.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
+                        <Text fill="WHITE" layoutX="28.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="53.291015625" />
+                        <Button fx:id="buttonExit" layoutX="87.0" layoutY="180.0" mnemonicParsing="false" onAction="#handleButtonExit" prefHeight="25.0" prefWidth="53.0" text="Exit" />
+                        <Text fill="WHITE" layoutX="53.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ruby Resort" textAlignment="CENTER" wrappingWidth="212.13671875">
                            <font>
-                              <Font size="33.0" />
+                              <Font name="Times New Roman" size="33.0" />
                            </font>
                         </Text>
-                        <Button fx:id="buttonCreate" layoutX="250.0" layoutY="251.0" mnemonicParsing="false" onAction="#handleButtonCreate" text="Create" />
-                        <CheckBox fx:id="checkBox" alignment="CENTER" contentDisplay="BOTTOM" layoutX="168.0" layoutY="179.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" text="Show Password?" textAlignment="JUSTIFY" />
-                        <TextField fx:id="textFieldForPassword" focusTraversable="false" layoutX="103.0" layoutY="144.0" promptText="ex: &quot;openseame12&quot;" visible="false" />
-                        <Label layoutX="89.0" layoutY="273.0" text="No Account? Please Click Signup!" />
+                        <CheckBox fx:id="checkBox" alignment="CENTER" contentDisplay="BOTTOM" layoutX="170.0" layoutY="214.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="17.0" prefWidth="113.0" text="Show Password?" textAlignment="JUSTIFY" textFill="WHITE" />
+                        <TextField fx:id="textFieldForPassword" focusTraversable="false" layoutX="88.0" layoutY="144.0" prefHeight="25.0" prefWidth="196.0" promptText="ex: &quot;openSesame&quot;" visible="false" />
+                        <Label layoutX="70.0" layoutY="258.0" prefHeight="17.0" prefWidth="161.0" text="No Account? Click to Sign Up!" textFill="WHITE" />
+                        <ImageView fitHeight="43.0" fitWidth="44.0" layoutX="236.0" layoutY="245.0">
+                           <image>
+                              <Image url="@../Pictures/ruby-on-rails.png" />
+                           </image>
+                        </ImageView>
+                        <Button fx:id="buttonCreate" layoutX="236.0" layoutY="251.0" mnemonicParsing="false" onAction="#handleButtonCreate" opacity="0.0" prefHeight="32.0" prefWidth="44.0" style="-fx-shape: &quot;M 350 400 L 200 250 L 250 200 L 450 200 L 500 250 L 350 400 &quot;;" text="Create" />
                      </children>
                   </AnchorPane>
             </content>
@@ -50,15 +55,20 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFFFFFF;">
                      <children>
-                        <Text layoutX="43.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
-                        <Text layoutX="43.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="53.291015625" />
-                        <TextField id="UserTextField" fx:id="textFieldUsernameManager" layoutX="103.0" layoutY="110.0" prefHeight="25.0" prefWidth="174.0" />
+                        <ImageView fitHeight="293.0" fitWidth="320.0">
+                           <image>
+                              <Image url="@../Pictures/abstract-blue-background_1048-1511.jpg" />
+                           </image>
+                        </ImageView>
+                        <Text layoutX="28.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
+                        <Text layoutX="28.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="53.291015625" />
+                        <TextField id="UserTextField" fx:id="textFieldUsernameManager" layoutX="88.0" layoutY="110.0" prefHeight="25.0" prefWidth="196.0" />
                         <Label fx:id="labelManagerLogin" layoutX="105.0" layoutY="227.0" minHeight="16" minWidth="69" prefHeight="17.0" prefWidth="171.0" />
-                        <PasswordField fx:id="passwordFieldManager" layoutX="105.0" layoutY="144.0" />
-                        <Button id="LoginButton" fx:id="buttonManagerLogin" layoutX="99.0" layoutY="223.0" mnemonicParsing="false" onAction="#handleButtonLoginManager" prefHeight="25.0" prefWidth="53.0" text="Login" />
-                        <Button fx:id="buttonExit1" layoutX="223.0" layoutY="223.0" mnemonicParsing="false" onAction="#handleButtonExit" prefHeight="25.0" prefWidth="53.0" text="Exit" />
-                        <TextField fx:id="textFieldForPasswordManager" layoutX="105.0" layoutY="144.0" />
-                        <CheckBox fx:id="checkBox2" alignment="CENTER" contentDisplay="BOTTOM" layoutX="169.0" layoutY="182.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="0.0" prefWidth="109.0" text="Show Password?" textAlignment="JUSTIFY" />
+                        <PasswordField fx:id="passwordFieldManager" layoutX="88.0" layoutY="144.0" prefHeight="25.0" prefWidth="196.0" />
+                        <Button id="LoginButton" fx:id="buttonManagerLogin" layoutX="230.0" layoutY="180.0" mnemonicParsing="false" onAction="#handleButtonLoginManager" prefHeight="25.0" prefWidth="53.0" text="Login" />
+                        <Button fx:id="buttonExit1" layoutX="88.0" layoutY="180.0" mnemonicParsing="false" onAction="#handleButtonExit" prefHeight="25.0" prefWidth="53.0" text="Exit" />
+                        <TextField fx:id="textFieldForPasswordManager" layoutX="88.0" layoutY="144.0" prefHeight="25.0" prefWidth="196.0" />
+                        <CheckBox fx:id="checkBox2" alignment="CENTER" contentDisplay="BOTTOM" layoutX="174.0" layoutY="215.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="0.0" prefWidth="109.0" text="Show Password?" textAlignment="JUSTIFY" />
                      </children></AnchorPane>
             </content>
           </Tab>
