--- a/src/sample/GuestMenu/GuestRoomTest1.fxml
+++ b/src/sample/GuestMenu/GuestRoomTest1.fxml
@@ -3,9 +3,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -21,16 +22,11 @@
             <content>
                   <AnchorPane prefHeight="292.0" prefWidth="325.0">
                      <children>
-                        <ListView fx:id="roomListView" layoutX="24.0" layoutY="181.0" prefHeight="215.0" prefWidth="125.0" />
-                        <Text layoutX="67.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rooms">
-                           <font>
-                              <Font size="14.0" />
-                           </font></Text>
                         <Text layoutX="242.0" layoutY="172.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room Preview">
                            <font>
                               <Font size="14.0" />
                            </font></Text>
-                        <ImageView fx:id="imageViewRoom" fitHeight="164.0" fitWidth="231.0" layoutX="171.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imageViewRoom" fitHeight="137.0" fitWidth="231.0" layoutX="171.0" layoutY="200.0" pickOnBounds="true">
                            <image>
                               <Image url="@../Pictures/Room1A.jpg" />
                            </image></ImageView>
@@ -52,12 +48,16 @@
                         <Label layoutX="24.0" layoutY="109.0" text="Check-Out" />
                         <DatePicker fx:id="checkOutDate" layoutX="88.0" layoutY="105.0" onAction="#handleCheckOut" prefHeight="25.0" prefWidth="167.0" />
                         <Button fx:id="populateRooms" layoutX="276.0" layoutY="81.0" mnemonicParsing="false" onAction="#populateRooms" text="View Rooms" />
-                        <Label layoutX="434.0" layoutY="53.0" text="Upcoming Events">
-                           <font>
-                              <Font size="20.0" />
-                           </font>
-                        </Label>
-                        <ListView fx:id="eventListView" layoutX="432.0" layoutY="92.0" prefHeight="311.0" prefWidth="157.0" />
+                        <TableView fx:id="roomTableView" layoutX="11.0" layoutY="156.0" prefHeight="226.0" prefWidth="151.0">
+                          <columns>
+                            <TableColumn fx:id="roomTableColumn" prefWidth="150.0" text="Available Rooms" />
+                          </columns>
+                        </TableView>
+                        <TableView fx:id="eventTableView" layoutX="432.0" layoutY="57.0" prefHeight="327.0" prefWidth="152.0">
+                          <columns>
+                            <TableColumn fx:id="eventTableColumn" prefWidth="150.0" text="Upcoming Events" />
+                          </columns>
+                        </TableView>
                      </children>
                   </AnchorPane>
             </content>
